--- a/source/assets/stylesheets/scss/layout/_menu.scss
+++ b/source/assets/stylesheets/scss/layout/_menu.scss
@@ -376,4 +376,23 @@ $navbar-collapsed-size: 60px;
       }
     }
   }
+
+  @media screen and (max-width: 768px) {
+    &--new {
+      &.ui.label {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 12px;
+        height: 12px;
+        font-size: 0;
+        border-radius: 100%;
+        transform: translate(0, -75%);
+
+        &:before {
+          content: '';
+        }
+      }
+    }
+  }
 }
